# mcpdrift

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/scripts/: risk_router.py
.github/workflows/: codeql.yml  dependabot-automerge.yml  mcpdrift.yml  mcpflight.yml  security-rescan.yml  studio-os-gate.yml
.mcpdrift/: contract.json
examples/sample_server/: mcpdrift.toml  server.py
src/mcpdrift/: __init__.py  cli.py  config.py  snapshot.py  status.py
src/mcpflight/: __init__.py  capture.py  cli.py  config.py  diffing.py
tests/: test_cli_integration.py  test_config.py  test_diffing.py
