[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpdrift"
version = "0.1.0"
description = "Local-first MCP contract snapshot and drift detection CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "G&D Works" }
]
dependencies = [
  "mcp==1.27.2",
  "typer>=0.20,<1.0",
  "tomli>=2.0; python_version < '3.11'"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[project.scripts]
mcpdrift = "mcpdrift.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
